objects/Wizard_Step__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Page_Content_Name__c</fullName>
        <description>Use for an apex:include tag or an iframe for content beyond rich text fields.</description>
        <label>Page Content Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Widard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wizard</label>
        <referenceTo>Wizard__c</referenceTo>
        <relationshipName>Wizard_Steps</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>SDO Wizard Step</label><nameField>
        <label>Wizard Step Name</label>
        <type>Text</type>
    </nameField><pluralLabel>SDO Wizard Steps</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>